--- a/Proyecto/dieta.html
+++ b/Proyecto/dieta.html
@@ -10,7 +10,12 @@
         <title>Dietas</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/dieta.css">
+        <link rel="stylesheet" href="sass/dieta/dieta.css">
+
+        <!-- bootstrap css-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    
+    
     </head>
     <body>
         <header>
@@ -23,22 +28,24 @@
         <hr>
         <section>
             <div class="container">
-                <div class="DietaP">
-                    <h2>Dieta Actual</h2>
-                    <h3>Revisa aquí tu dieta actual</h3>
-                    <a href="index.html">
-                        <img src="images/Morpeko_voraz.png" style="width: 28.7em;">
-                        <!--el uso de esa imagen es porque pokemon adopta esa forma debido al hambre que tiene-->
-                    </a>
-                </div>
-                <div class="Calorias">
-                    <h2>Calorias</h2>
-                    <h3>Ingresa aquí tus calorias consumidas</h3>
-                    <a href="index.html">
-                        <div class="avanceI"></div>
-                            <img src="images/9c0e4bb657eb8b4e9ac3912c8b081e06b6ccd7c5_hq.jpg" style="width: 59.25em;">
-                        </div>
-                    </a>
+                <div class="row">
+                    <div class="col-md-5">
+                        <h2>Dieta Actual</h2>
+                        <h3>Revisa aquí tu dieta actual</h3>
+                        <a href="index.html">
+                            <img src="images/Morpeko_voraz.png" style="width: 20em;">
+                            <!--el uso de esa imagen es porque pokemon adopta esa forma debido al hambre que tiene-->
+                        </a>
+                    </div>
+                    <div class="col-md-7">
+                        <h2>Calorias</h2>
+                        <h3>Ingresa aquí tus calorias consumidas</h3>
+                        <a href="index.html">
+                            <div class="avanceI"></div>
+                                <img src="images/9c0e4bb657eb8b4e9ac3912c8b081e06b6ccd7c5_hq.jpg" style="width: 50em;">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -59,5 +66,7 @@
         </footer>
 
         <script src="" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     </body>
 </html>
