--- a/Proyecto/entrenamiento.html
+++ b/Proyecto/entrenamiento.html
@@ -10,7 +10,12 @@
         <title>Entrenamiento</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/entrenamiento.css">
+        <link rel="stylesheet" href="sass/entrenamiento/entrenamiento.css">
+
+        <!-- bootstrap css-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+
     </head>
     <body>
         <header>
@@ -23,21 +28,23 @@
         <hr>
         <section>
             <div class="container">
-                <div class="entrenamientoH">
-                    <h2>Entrenamiento Personal</h2>
-                    <h3>Aqui ingresas tu entrenamiento personal</h3>
-                    <a href="index.html">
-                        <img src="images/Blasco_ROZA.png" style="width: 28.7em;">
-                    </a>
-                </div>
-                <div class="entrenamientoH">
-                    <h2>Avance</h2>
-                    <h3>Aqui consulta tus sesiones de entrenamiento pasadas</h3>
-                    <a href="index.html">
-                        <div class="avanceI"></div>
-                            <img src="images/Sin título.png" style="width: 59.25em;">
-                        </div>
-                    </a>
+                <div class="row">
+                    <div class="col-md-5">
+                        <h2>Entrenamiento Personal</h2>
+                        <h3>Aqui ingresas tu entrenamiento personal</h3>
+                        <a href="index.html">
+                            <img src="images/Blasco_ROZA.png" style="width: 20em;">
+                        </a>
+                    </div>
+                    <div class="col-md-7">
+                        <h2>Avance</h2>
+                        <h3>Aqui consulta tus sesiones de entrenamiento pasadas</h3>
+                        <a href="index.html">
+                            <div class="avanceI"></div>
+                                <img src="images/Sin título.png" style="width: 50em;">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -58,5 +65,7 @@
         </footer>
 
         <script src="" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     </body>
 </html>
