--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,12 +10,17 @@
         <title>UrshiFit</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="sass/index/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <!--Fuentes-->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
         <!--Fuentes-->
+
+        <!-- bootstrap css-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+     
+
     </head>
     <body>
         <header>
@@ -48,11 +53,11 @@
         <hr>
         <section>
             <div class="contenido">
-                <div class="entrenamiento">
-                    <div class="imagenE">
+                <div class="row">
+                    <div class="col-md-6">
                         <img src="images/maxresdefault.jpg" style="width: 10em;">
                     </div>
-                    <div class="textoE">
+                    <div class="col-md-6" text-align=right>
                         <h2>Entrenamientos</h2>
                         <p>En este apartado podrás ver tus entrenamientos disponibles como tambien<br>
                         podrás ingresar tus sesiones de entrenamientos completadas</p>
@@ -62,8 +67,8 @@
                     </div>
                 </div>
                 <hr>
-                <div class="dieta">
-                    <div class="textoD">
+                <div class="row">
+                    <div class="col-md-6">
                         <h2>Dietas</h2>
                         <p>En este apartado podrás ver tus dietas disponibles como tambien<br>
                         podrás ingresar tus comidas diarias para asi hacer un correcto seguimiento<br>
@@ -72,16 +77,16 @@
                             <button>Dietas</button>
                         </a>
                     </div>
-                    <div class="imagenD">
+                    <div class="col-md-6">
                         <img src="images/9c0e4bb657eb8b4e9ac3912c8b081e06b6ccd7c5_hq.jpg" style="width: 18em;">
                     </div>
                 </div>
                 <hr>
-                <div class="recomendaciones">
-                    <div class="imagenR">
+                <div class="row">
+                    <div class="col-md-6">
                         <img src="images/Sin título.png" style="width: 11em;">
                     </div>
-                    <div class="textoR">
+                    <div class="col-md-6">
                         <h2>Recomendaciones</h2>
                         <p>En este apartado podrás encontrar dietas estandar como tambien rutinas<br>
                         de ejercicios armadas por profesionales, si bien no serán personalizadas, son utiles<br>
@@ -111,5 +116,7 @@
         </footer>
 
         <script src="" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     </body>
 </html>
