--- a/Proyecto/recomendacion.html
+++ b/Proyecto/recomendacion.html
@@ -10,7 +10,12 @@
         <title>Recomendaciones</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/recomendacion.css">
+        <link rel="stylesheet" href="sass/recomendacion/recomendacion.css">
+
+        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+
     </head>
     <body>
         <header>
@@ -24,74 +29,80 @@
         
         <section>
             <div class="container">
-                <div class="Dieta">
-                    <h2>Dieta Proteina</h2>
-                    <h3>Dieta enfocada en el aumento de masa corporal</h3>
-                    <a href="index.html">
-                        <img src="images/Proteína_(Dream_World).png" style="width: 15em;">
-                    </a>
-                </div>
-                <div class="Dieta">
-                    <h2>Dieta Más PS</h2>
-                    <h3>Dieta enfocada en el aumento de aguante fisico</h3>
-                    <a href="index.html">
-                        <img src="images/Más_PS_(Dream_World).png" style="width: 15em;">
-                    </a>
-                </div>
-                <div class="Dieta">
-                    <h2>Dieta Carburante</h2>
-                    <h3>Dieta enfocada en la perdida de grasa para una mayor agilidad</h3>
-                    <a href="index.html">
-                        <img src="images/Carburante_(Dream_World).png" style="width: 15em;">
-                    </a>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>Dieta Proteina</h2>
+                        <h3>Dieta enfocada en el aumento de masa corporal</h3>
+                        <a href="index.html">
+                            <img src="images/Proteína_(Dream_World).png" style="width: 15em;">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Dieta Más PS</h2>
+                        <h3>Dieta enfocada en el aumento de aguante fisico</h3>
+                        <a href="index.html">
+                            <img src="images/Más_PS_(Dream_World).png" style="width: 15em;">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Dieta Carburante</h2>
+                        <h3>Dieta enfocada en la perdida de grasa para una mayor agilidad</h3>
+                        <a href="index.html">
+                            <img src="images/Carburante_(Dream_World).png" style="width: 15em;">
+                        </a>
+                    </div>
                 </div>
             </div>
             <hr>
             <section>
                 <div class="container">
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Buzzwole</h2>
-                        <h3>Cuerpos Definidos</h3>
-                        <a href="index.html">
-                            <img src="images/Buzzwole-Pokemon-Free-PNG.png" style="width: 28.7em;">
-                        </a>
-                    </div>
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Conkeldurr</h2>
-                        <h3>Cuerpos Grandes</h3>
-                        <a href="index.html">
-                            <img src="images/534.png" style="width: 28.7em;">
-                        </a>
-                    </div>
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Gallade</h2>
-                        <h3>Cuerpos Delgados</h3>
-                        <a href="index.html">
-                            <img src="images/1200px-Gallade.png" style="width: 28.7em;">
-                        </a>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Buzzwole</h2>
+                            <h3>Cuerpos Definidos</h3>
+                            <a href="index.html">
+                                <img src="images/Buzzwole-Pokemon-Free-PNG.png" style="width: 25em;">
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Conkeldurr</h2>
+                            <h3>Cuerpos Grandes</h3>
+                            <a href="index.html">
+                                <img src="images/534.png" style="width: 25em;">
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Gallade</h2>
+                            <h3>Cuerpos Delgados</h3>
+                            <a href="index.html">
+                                <img src="images/1200px-Gallade.png" style="width: 25em;">
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="container">
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Hitmonlee</h2>
-                        <h3>Taekwondo</h3>
-                        <a href="index.html">
-                            <img src="images/e26045a146349f2b8c1c60b022612c29.png" style="width: 28.7em;">
-                        </a>
-                    </div>
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Hitmonchan</h2>
-                        <h3>Boxeo</h3>
-                        <a href="index.html">
-                            <img src="images/daa1a1feea05b278d87029493934543e.png" style="width: 28.7em;">
-                        </a>
-                    </div>
-                    <div class="entrenamiento">
-                        <h2>Entrenamiento tipo Hawlucha</h2>
-                        <h3>Lucha Libre</h3>
-                        <a href="index.html">
-                            <img src="images/Hawlucha.png" style="width: 28.7em;">
-                        </a>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Hitmonlee</h2>
+                            <h3>Taekwondo</h3>
+                            <a href="index.html">
+                                <img src="images/e26045a146349f2b8c1c60b022612c29.png" style="width: 25em;">
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Hitmonchan</h2>
+                            <h3>Boxeo</h3>
+                            <a href="index.html">
+                                <img src="images/daa1a1feea05b278d87029493934543e.png" style="width: 25em;">
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <h2>Entrenamiento tipo Hawlucha</h2>
+                            <h3>Lucha Libre</h3>
+                            <a href="index.html">
+                                <img src="images/Hawlucha.png" style="width: 25em;">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -115,5 +126,7 @@
         </footer>
 
         <script src="" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     </body>
 </html>
